<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="LabelFor">
    <Button
        android:id="@+id/btn_retorn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="118dp"
        android:backgroundTint="#7FE81B1B"
        android:onClick="retornar"
        android:text="@string/retorna"
        app:layout_constraintBottom_toTopOf="@+id/cl_1"
        app:layout_constraintEnd_toStartOf="@+id/btn_aplica"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_aplica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#A652C657"
        android:onClick="afegirJugBD"
        android:text="@string/afegeix"
        app:layout_constraintBottom_toTopOf="@+id/cl_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_retorn"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_1"
        android:layout_width="391dp"
        android:layout_height="84dp"
        android:layout_marginTop="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_descNom"
            android:layout_width="202dp"
            android:layout_height="32dp"
            android:gravity="fill"
            android:text="@string/nom_del_jugador"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.084"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_numNom"
            android:layout_width="44dp"
            android:layout_height="43dp"
            android:background="@drawable/oval"
            android:gravity="center"
            android:labelFor="@id/et_setNom"
            android:text="@string/_1"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/et_setNom"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_descNom" />

        <EditText
            android:id="@+id/et_setNom"
            android:layout_width="323dp"
            android:layout_height="48dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/rectangle"
            android:ems="10"
            android:hint="@string/introdueix_el_nom"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="#9B000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.89" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_2"
        android:layout_width="389dp"
        android:layout_height="89dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_1">

        <TextView
            android:id="@+id/tv_descPartidesG"
            android:layout_width="200dp"
            android:layout_height="38dp"
            android:gravity="fill"
            android:text="@string/partides_guanyades"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.078"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_numPartidesG"
            android:layout_width="44dp"
            android:layout_height="43dp"
            android:layout_marginBottom="9dp"
            android:background="@drawable/oval"
            android:gravity="center"
            android:labelFor="@id/et_setPartidesGuanyades"
            android:text="@string/_2"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/et_setPartidesGuanyades"
            app:layout_constraintHorizontal_bias="0.882"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_setPartidesGuanyades"
            android:layout_width="323dp"
            android:layout_height="48dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/rectangle"
            android:ems="10"
            android:hint="@string/introdueix_les_partides_guanyades"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="#9B000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.89" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_3"
        android:layout_width="391dp"
        android:layout_height="84dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_2">

        <TextView
            android:id="@+id/tv_descPartidesP"
            android:layout_width="193dp"
            android:layout_height="33dp"
            android:gravity="fill"
            android:text="@string/partides_perdudes"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.084"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_numPartidesP"
            android:layout_width="44dp"
            android:layout_height="43dp"
            android:layout_marginBottom="9dp"
            android:background="@drawable/oval"
            android:gravity="center"
            android:labelFor="@id/et_setPartidesPerdudes"
            android:text="@string/_3"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/et_setPartidesPerdudes"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_setPartidesPerdudes"
            android:layout_width="323dp"
            android:layout_height="48dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/rectangle"
            android:ems="10"
            android:hint="@string/introdueix_les_partides_perdudes"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="#9B000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.89" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_4"
        android:layout_width="391dp"
        android:layout_height="84dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_3">

        <TextView
            android:id="@+id/tv_descPartidesT"
            android:layout_width="192dp"
            android:layout_height="29dp"
            android:gravity="fill"
            android:text="@string/partides_totals"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_numPartidesT"
            android:layout_width="44dp"
            android:layout_height="43dp"
            android:layout_marginBottom="9dp"
            android:background="@drawable/oval"
            android:gravity="center"
            android:labelFor="@id/et_setPartidesTotals"
            android:text="@string/_4"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/et_setPartidesTotals"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_setPartidesTotals"
            android:layout_width="323dp"
            android:layout_height="48dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/rectangle"
            android:ems="10"
            android:hint="@string/introdueix_les_partides_totals"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="#9B000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.89" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_5"
        android:layout_width="411dp"
        android:layout_height="275dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_4">

        <ImageView
            android:id="@+id/iv_camera"
            android:layout_width="183dp"
            android:layout_height="175dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/img_camera"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.241" />

        <TextView
            android:id="@+id/tv_prova2"
            android:layout_width="407dp"
            android:layout_height="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_camera"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>